--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 node_modules
-index.*.*
+index.bundle.cjs
 package-lock.json
 *.log*
 *.result.css
 .*
+!.appveyor.yml
 !.editorconfig
 !.gitignore
-!.rollup.js
-!.tape.js
-!.travis.yml
+!.rollup.mjs
+!.tape.cjs
+!.github
