--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 node_modules
-index.bundle.cjs
-package-lock.json
+dist/
 *.log*
 *.result.css
-.*
-!.appveyor.yml
-!.editorconfig
-!.gitignore
-!.rollup.mjs
-!.tape.cjs
-!.github
+.eslintcache
+.yarn/unplugged
+.yarn/cache
+.yarn/build-state.yml
+.yarn/install-state.gz
